<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/background_login_account"
        android:gravity="center"
        android:hint="@string/password_hint_password"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edittext_password_confirm"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_login_account"
        android:gravity="center"
        android:hint="@string/password_hint_password_confirm"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_login_button"
        android:gravity="center"
        android:text="@string/password_commit"
        android:textColor="@color/text_button_login"
        android:textSize="25sp" />

</LinearLayout>