<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/si_tv_commname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="花王一匙靈(制菌)濃縮洗衣粉1.1kg"
            android:textColor="@color/category_background_selected"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/signin_comm_name"
                android:textColor="@color/manufacturer_text_button"
                android:textSize="20sp" />

            <Button
                android:id="@+id/si_btn_pathchoose"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:background="@drawable/blue_square_shape"
                android:gravity="center_vertical"
                android:hint="@string/signin_plzchoose"
                android:paddingLeft="20dp"
                android:textColorHint="@color/manufacturer_grey_text_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/signin_area"
                android:textColor="@color/manufacturer_text_button"
                android:textSize="20sp" />

            <Button
                android:id="@+id/si_btn_area"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:background="@drawable/blue_square_shape"
                android:gravity="center_vertical"
                android:hint="@string/signin_plzchoose"
                android:paddingLeft="20dp"
                android:textColorHint="@color/manufacturer_grey_text_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/signin_store_name"
                android:textColor="@color/manufacturer_text_button"
                android:textSize="20sp" />

            <Button
                android:id="@+id/si_btn_storename"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:background="@drawable/blue_square_shape"
                android:gravity="center_vertical"
                android:hint="@string/signin_plzchoose"
                android:paddingLeft="20dp"
                android:textColorHint="@color/manufacturer_grey_text_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/signin_comm_price"
                android:textColor="@color/manufacturer_text_button"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/si_et_commprice"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:background="@drawable/blue_square_shape"
                android:ems="10"
                android:gravity="center_vertical"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:singleLine="true" >

                <requestFocus />
            </EditText>

        </LinearLayout>

    </LinearLayout>
    
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="0dp"
           android:layout_marginTop="20dp"
           android:layout_weight="1" >

		        <Button
		            android:id="@+id/si_btn_send"
		            android:layout_width="280dp"
		            android:layout_height="40dp"
		            android:layout_marginTop="10dp"
		            android:background="@drawable/background_login_button"
		            android:gravity="center"
		            android:scaleType="fitXY"
		            android:text="@string/mc_editmodify"
		            android:textColor="@color/category_background_selected"
		            android:textSize="24sp" />

		    </LinearLayout>

</LinearLayout>